--- a/pages/emoCardsHate.html
+++ b/pages/emoCardsHate.html
@@ -23,7 +23,7 @@
               <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
           </div>
         </div>
-        <div class="d-flex flex-wrap justify-content-center justify-content-md-start mb-72" id="hateCards">
+        <div class="d-flex flex-wrap justify-content-center justify-content-md-start mt-48 mb-72" id="hateCards">
           <!-- <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate01">
             <p>無&nbsp;聊</p>
             <div class="img-box">
@@ -86,175 +86,73 @@
 
     <%- include('./layout/baseJs'); -%>
     <script>
-      // let imgHate01 = "https://wavemocards.com/frontend/upload/07-hate/hate01-boring.svg";
-      // let imgHate02 = "https://wavemocards.com/frontend/upload/07-hate/hate02-weariness.svg";
-      // let imgHate03 = "https://wavemocards.com/frontend/upload/07-hate/hate03-inferiority.svg";
-      // let imgHate04 = "https://wavemocards.com/frontend/upload/07-hate/hate04-hate.svg";
-      // let imgHate05 = "https://wavemocards.com/frontend/upload/07-hate/hate05-jealousy.svg";
-      // let imgHate06 = "https://wavemocards.com/frontend/upload/07-hate/hate06-disgust.svg";
-      // let imgHate07 = "https://wavemocards.com/frontend/upload/07-hate/hate07-nausea.svg";
-      // let imgHate08 = "https://wavemocards.com/frontend/upload/07-hate/hate08-resentment.svg";
-
-      const hateCards = document.querySelector('#hateCards');
+      const cards = document.querySelector('#hateCards');
       const listModal = document.querySelector('.list');
 
-      axios.get("https://api.wavemocards.com/emotions?require=cards")
+      axios.get("https://api.wavemocards.com/emoinfo/cards/")
       .then(function(response){
         let aryData = Object.values(response.data); // 轉成「陣列」
-        let aryIds = Object.keys(response.data); // 資料庫中的各卡片 id (0~64)
 
-        for(let i=0; i<aryData.length; i++){
-          aryData[i].id= aryIds[i];
-        }
-
-        // 展開卡
-        initCards()
+        initCards();
         function initCards() {
-            let strCardsHate = "";
-            let emo;
-            aryData.forEach(function(data, i){
-              if(data.Category == "討厭"){
-                  emo = "hate";
-                  let contentCards = `
-                  <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                      <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
-                      <div class="img-box">
-                      <img src="./upload/${data.id}.svg" alt="${data.Name}">
-                      </div>
-                  </button>`;
-                  strCardsHate+=contentCards;
-              }
-            })
-            hateCards.innerHTML = strCardsHate;
-        }
-
-        // 大情緒卡 Modal
-        initModal();
-        function initModal() {
+          let strCards = "";
           let strModal = "";
           let emo;
           aryData.forEach(function(data, i){
-            if (data.Category == "討厭") {
-              emo = "hate";
-            }
-            
-            let content = `
-              <li>
-                <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
-                    <div class="modal-content bg-${emo}">
-                      <div class="modal-body d-sm-flex justify-content-between align-items-center">
-                        <div class="box-bigCard-text">
-                          <div class="d-flex d-md-none w-100 justify-content-center">
-                            <div class="d-sm-none box-bigCard-img mb-8">
-                              <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
-                            </div>
-                          </div>
-                          <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
-                            <h2>${data.Name}</h2>
-                            <!-- <a href="modifyEmoCard.html" role="button">
-                                <i class="bi bi-pencil-square"></i>
-                            </a> -->
-                          </div>
-                          <div class="mb-16">
-                            <h3 class="mb-4">意思：</h3>
-                            <p>${data.Description}</p>
-                          </div>
-                          <div>
-                            <h3 class="mb-4">例句：</h3>
-                            <p>${data.Example}</p>
-                          </div>
-                        </div>
-                        <div class="d-none d-sm-block box-bigCard-img">
-                          <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
-                        </div>
+              let dataName = data.name;
+              let dataId = data.ID;
+              let dataDescription = data.description;
+              let dataExample = data.example;
+              if(data.category == "討厭"){
+                  emo = "hate";
+                  let contentCards = `
+                    <button type="button" class="class-card me-24 mb-24 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+                      <p>${dataName[0]}&nbsp;${dataName[1]}</p>
+                      <div class="img-box">
+                          <img src="./upload/${dataId}.svg" alt="${dataName}">
                       </div>
-                    </div>
-                  </div>
-                </div>
-              </li>`;
-            strModal+=content;
-          })
-          listModal.innerHTML = strModal;
-        }
+                    </button>`;
+                  strCards+=contentCards;
 
+                  let contentModal = `
+                  <li>
+                        <div class="modal fade px-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+                                <div class="modal-content bg-${emo} my-36">
+                                    <div class="modal-body d-sm-flex justify-content-between align-items-center position-relative">
+                                        <div class="box-bigCard-text">
+                                            <div class="d-flex d-md-none w-100 justify-content-center">
+                                                <div class="d-sm-none box-bigCard-img mb-8">
+                                                    <img class="w-100" src="./upload/${dataId}.svg" alt="${dataName}">
+                                                </div>
+                                            </div>
+                                            <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
+                                                <h2>${dataName}</h2>
+                                            </div>
+                                            <div class="mb-16">
+                                                <h3 class="mb-4">意思：</h3>
+                                                <p>${dataDescription}</p>
+                                            </div>
+                                            <div>
+                                                <h3 class="mb-4">例句：</h3>
+                                                <p>${dataExample}</p>
+                                            </div>
+                                        </div>
+                                        <div class="d-none d-sm-block box-bigCard-img">
+                                            <img class="w-100" src="./upload/${dataId}.svg" alt="${dataName}">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>`;
+                  strModal+=contentModal;
+                  cards.innerHTML = strCards;
+                  listModal.innerHTML = strModal;
+              }
+          })
+        }
       })
-      // let aryData = Object.values(response.data);
-      // initCards()
-      // function initCards() {
-      //   let strCards = "";
-      //   let strModal = "";
-      //   let emo;
-      //   aryData.forEach(function(data, i){
-      //     let imgSrc;
-      //     if(data.Category == "討厭"){
-      //       emo = "hate";
-      //       if(data.Name == "無聊") {
-      //         imgSrc = imgHate01;
-      //       } else if (data.Name == "厭倦") {
-      //         imgSrc = imgHate02;
-      //       } else if (data.Name == "自卑") {
-      //         imgSrc = imgHate03;
-      //       } else if (data.Name == "討厭") {
-      //         imgSrc = imgHate04;
-      //       } else if (data.Name == "嫉妒") {
-      //         imgSrc = imgHate05;
-      //       } else if (data.Name == "厭惡") {
-      //         imgSrc = imgHate06;
-      //       } else if (data.Name == "噁心") {
-      //         imgSrc = imgHate07;
-      //       } else if (data.Name == "怨恨") {
-      //         imgSrc = imgHate08;
-      //       }
-      //       let contentCards = `
-      //         <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-      //           <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
-      //           <div class="img-box">
-      //             <img src="${imgSrc}}" alt="${data.Name}">
-      //           </div>
-      //         </button>`;
-      //       let contentModals = `
-      //       <li>
-      //           <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      //             <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
-      //               <div class="modal-content bg-${emo}">
-      //                 <div class="modal-body d-sm-flex justify-content-between align-items-center">
-      //                   <div class="box-bigCard-text">
-      //                     <div class="d-flex d-md-none w-100 justify-content-center">
-      //                       <div class="d-sm-none box-bigCard-img mb-8">
-      //                         <img class="w-100" src="${imgSrc}" alt="${data.Name}">
-      //                       </div>
-      //                     </div>
-      //                     <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
-      //                       <h2>${data.Name}</h2>
-      //                       <!-- <a href="modifyEmoCard.html" role="button">
-      //                           <i class="bi bi-pencil-square"></i>
-      //                       </a> -->
-      //                     </div>
-      //                     <div class="mb-16">
-      //                       <h3 class="mb-4">意思：</h3>
-      //                       <p>${data.Description}</p>
-      //                     </div>
-      //                     <div>
-      //                       <h3 class="mb-4">例句：</h3>
-      //                       <p>${data.Example}</p>
-      //                     </div>
-      //                   </div>
-      //                   <div class="d-none d-sm-block box-bigCard-img">
-      //                     <img class="w-100" src="${imgSrc}" alt="${data.Name}">
-      //                   </div>
-      //                 </div>
-      //               </div>
-      //             </div>
-      //           </div>
-      //         </li>`;
-      //       strCards+=contentCards;
-      //       strModal+=contentModals;
-      //     }
-      //   })
-      //   hateCards.innerHTML = strCards;
-      //   listModal.innerHTML = strModal;
-      // }
     </script>
   </body>
 </html>
