--- a/emoCardsRelived.html
+++ b/emoCardsRelived.html
@@ -86,7 +86,7 @@
               <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
           </div>
         </div>
-        <div class="d-flex flex-wrap justify-content-center justify-content-md-start mb-72" id="relivedCards">
+        <div class="d-flex flex-wrap justify-content-center justify-content-md-start mt-48 mb-72" id="relivedCards">
         </div>
       </div>
     </main>
@@ -183,96 +183,72 @@
 
 <!-- axios -->
 <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>    <script>
-      // let imgRelived01 = "https://wavemocards.com/frontend/upload/03-relived/relived01-comfortable.svg";
-      // let imgRelived02 = "https://wavemocards.com/frontend/upload/03-relived/relived02-relax.svg";
-      // let imgRelived03 = "https://wavemocards.com/frontend/upload/03-relived/relived03-calm.svg";
-      // let imgRelived04 = "https://wavemocards.com/frontend/upload/03-relived/relived04-relieved.svg";
-      // let imgRelived05 = "https://wavemocards.com/frontend/upload/03-relived/relived05-ease.svg";
-      // let imgRelived06 = "https://wavemocards.com/frontend/upload/03-relived/relived06-trust.svg";
-
-      const relivedCards = document.querySelector('#relivedCards');
+      const cards = document.querySelector('#relivedCards');
       const listModal = document.querySelector('.list');
 
-      axios.get("https://api.wavemocards.com/emotions?require=cards")
+      axios.get("https://api.wavemocards.com/emoinfo/cards/")
       .then(function(response){
         let aryData = Object.values(response.data); // 轉成「陣列」
-        let aryIds = Object.keys(response.data); // 資料庫中的各卡片 id (0~64)
 
-        for(let i=0; i<aryData.length; i++){
-          aryData[i].id= aryIds[i];
-        }
-
-        // 展開卡
-        initCards()
+        initCards();
         function initCards() {
-            let strCardsRelived = "";
-            let emo;
-            aryData.forEach(function(data, i){
-              if(data.Category == "安心"){
-                  emo = "relived";
-                  let contentCards = `
-                  <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                      <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
-                      <div class="img-box">
-                      <img src="./upload/${data.id}.svg" alt="${data.Name}">
-                      </div>
-                  </button>`;
-                  strCardsRelived+=contentCards;
-              }
-            })
-            relivedCards.innerHTML = strCardsRelived;
-        }
-
-        // 大情緒卡 Modal
-        initModal();
-        function initModal() {
+          let strCards = "";
           let strModal = "";
           let emo;
           aryData.forEach(function(data, i){
-              if (data.Category == "安心") {
-                emo = "relived";
-              }
-              
-              let content = `
-                <li>
-                  <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
-                      <div class="modal-content bg-${emo}">
-                        <div class="modal-body d-sm-flex justify-content-between align-items-center">
-                          <div class="box-bigCard-text">
-                            <div class="d-flex d-md-none w-100 justify-content-center">
-                              <div class="d-sm-none box-bigCard-img mb-8">
-                                <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
-                              </div>
-                            </div>
-                            <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
-                              <h2>${data.Name}</h2>
-                              <!-- <a href="modifyEmoCard.html" role="button">
-                                  <i class="bi bi-pencil-square"></i>
-                              </a> -->
-                            </div>
-                            <div class="mb-16">
-                              <h3 class="mb-4">意思：</h3>
-                              <p>${data.Description}</p>
-                            </div>
-                            <div>
-                              <h3 class="mb-4">例句：</h3>
-                              <p>${data.Example}</p>
-                            </div>
-                          </div>
-                          <div class="d-none d-sm-block box-bigCard-img">
-                            <img class="w-100" src="./upload/${data.id}.svg" alt="${data.Name}">
-                          </div>
-                        </div>
+              let dataName = data.name;
+              let dataId = data.ID;
+              let dataDescription = data.description;
+              let dataExample = data.example;
+              if(data.category == "安心"){
+                  emo = "relived";
+                  let contentCards = `
+                    <button type="button" class="class-card me-24 mb-24 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+                      <p>${dataName[0]}&nbsp;${dataName[1]}</p>
+                      <div class="img-box">
+                          <img src="./upload/${dataId}.svg" alt="${dataName}">
                       </div>
-                    </div>
-                  </div>
-                </li>`;
-              strModal+=content;
-          })
-          listModal.innerHTML = strModal;
-        }
+                    </button>`;
+                  strCards+=contentCards;
 
+                  let contentModal = `
+                  <li>
+                        <div class="modal fade px-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+                                <div class="modal-content bg-${emo} my-36">
+                                    <div class="modal-body d-sm-flex justify-content-between align-items-center position-relative">
+                                        <div class="box-bigCard-text">
+                                            <div class="d-flex d-md-none w-100 justify-content-center">
+                                                <div class="d-sm-none box-bigCard-img mb-8">
+                                                    <img class="w-100" src="./upload/${dataId}.svg" alt="${dataName}">
+                                                </div>
+                                            </div>
+                                            <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
+                                                <h2>${dataName}</h2>
+                                            </div>
+                                            <div class="mb-16">
+                                                <h3 class="mb-4">意思：</h3>
+                                                <p>${dataDescription}</p>
+                                            </div>
+                                            <div>
+                                                <h3 class="mb-4">例句：</h3>
+                                                <p>${dataExample}</p>
+                                            </div>
+                                        </div>
+                                        <div class="d-none d-sm-block box-bigCard-img">
+                                            <img class="w-100" src="./upload/${dataId}.svg" alt="${dataName}">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>`;
+                  strModal+=contentModal;
+                  cards.innerHTML = strCards;
+                  listModal.innerHTML = strModal;
+              }
+          })
+        }
       })
 
       // let aryData = Object.values(response.data);
