--- a/findMyEmotions.html
+++ b/findMyEmotions.html
@@ -222,6 +222,7 @@
     btnStarts.forEach(function(btnStart, i){
       btnStart.addEventListener("click", function(){
         localStorage.removeItem("addedCards");
+        localStorage.removeItem("btnName");
         location.href = "findEmoCards.html";
       })
     })
